# Mario

./: CMakeLists.txt  README.md  main.cpp
Code/: Entitati.h  Entitati1.h  defineuri.h  input.txt  main.cpp  statemachine.cpp
Code/Levels/: level1.txt
Code/include/: Entitati.h  defineuri.h
Code/include/Entities/: Animation.h  Audio.h  Coin.h  Enemy.h  Entity.h  EntityFactory.h  Living.h  Player.h  Turtle.h  includeAll.h
Code/include/Entities/Environment/: BrickBlock.h  Environment.h  GroundBlock.h  MovebleEnvironment.h  QuestionBlock.h
Code/include/Exceptii/: BaseException.h  FileException.h  FpsException.h  TextureException.h  exceptii.h
Code/include/Exception/: BaseException.h  FileException.h  FpsException.h  TextureException.h
Code/include/Observer/: IObserver.h  ISubject.h  ScoreManager.h
Code/include/Template/: ResourceAnimation.h  ResourceAudio.h  ResourceManager.h  templateFunction.h
Code/include/entitati/: Animation.h  Brick.h  Coin.h  Enemy.h  Entitati.h  Entity.h  EntityFactory.h  Environment.h  Living.h  Player.h  Turtle.h  includeAll.h
Code/include/entitati/environment/: Brick.h  BrickBlock.h  Environment.h  GroundBlock.h  MovebleEnvironment.h  QuestionBlock.h
Code/include/game/: gameFunction.h
Code/src/: Animation.cpp  Audio.cpp  Brick.cpp  Coin.cpp  Enemy.cpp  Entitati.cpp  Entity.cpp  EntityInitialization.cpp  Environment.cpp  Living.cpp  Player.cpp  Turtle.cpp  gameFunction.cpp  includeAll.cpp  main.cpp
Code/src/Environment/: BrickBlock.cpp  Environment.cpp  GroundBlock.cpp  MovebleEnvironment.cpp  QuestionBlock.cpp
Code/src/Exception/: BaseException.cpp  FileException.cpp  FpsException.cpp  TextureException.cpp
Code/src/Game/: collision.cpp  gameFunction.cpp  gameUtilities.cpp  setLevel.cpp
Code/src/Observer/: IObserver.cpp  ScoreManager.cpp
Code/src/environment/: Brick.cpp  BrickBlock.cpp  Environment.cpp  GroundBlock.cpp  MovebleEnvironment.cpp  QuestionBlock.cpp
Code/src/exceptii/: BaseException.cpp  FileException.cpp  FpsException.cpp  TextureException.cpp
Code/src/game/: collision.cpp  gameFunction.cpp  gameUtilities.cpp  setLevel.cpp
